--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
     <title>My Webpage!!</title>
   </head>
   <body>
-      Hello, world! Hello Again!
+      Hello, world! Hello Again! Hello after the reset!
   </body>
 </html>
