--- a/hello.html
+++ b/hello.html
@@ -5,5 +5,12 @@
   </head>
   <body>
       Hello, world! Hello Again! Hello after the reset!
+      Ways I know to say Hello
+      <ul>
+          <li> Hola </li>
+          <li> Hello </li>
+          <li> Mar7aba</li>
+          <li> Bonjour</li>
+      </ul>
   </body>
 </html>
