added mkbhd gif

--- a/hello.html
+++ b/hello.html
@@ -12,5 +12,7 @@
           <li> Mar7aba</li>
           <li> Bonjour</li>
       </ul>
+      This is a gif
+      <img src="mkbhd.gif" height="200" width="200">
   </body>
 </html>
