added break before gif

--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,8 @@
           <li> Mar7aba</li>
           <li> Bonjour</li>
       </ul>
-      This is a gif
+      This is a gif<br/>
+
       <img src="mkbhd.gif" height="200" width="200">
   </body>
 </html>
