auto gif sizing wow

--- a/hello.html
+++ b/hello.html
@@ -14,6 +14,6 @@
       </ul>
       This is a gif<br/>
 
-      <img src="mkbhd.gif" height="200" width="200">
+      <img src="mkbhd.gif" height="50%" width="50%">
   </body>
 </html>
