--- a/hello.html
+++ b/hello.html
@@ -15,5 +15,22 @@
       This is a gif<br/>
 
       <img src="mkbhd.gif" height="50%" width="50%">
+      <h1> Random data because why not </h1>
+        <table>
+            <tr>
+              <td> 1 </td>
+              <td> 2 </td>
+              <td> 3 </td>
+              <td> 4 </td>
+            </tr>
+            <tr>
+              <td> A </td>
+              <td> B </td>
+              <td> C </td>
+              <td> D </td>
+          </table>
+          <form>
+            <input type="text" placeholder="random shit honestly" random = "random">
+            <button> Press here for nothing </button>
   </body>
 </html>
