--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
       This is a gif<br/>
 
       <img src="mkbhd.gif" height="50%" width="50%">
-      <h1> Random data because why not </h1>
+      <h1 style="color:red;text-align:center;""> Random data because why not </h1>
         <table>
             <tr>
               <td> 1 </td>
