--- a/style.html
+++ b/style.html
@@ -25,6 +25,7 @@
 
       <img src="mkbhd.gif" height="50%" width="50%">
       <h1> Random data because why not </h1>
+      <h1> Here is a second h1</h1>
         <table>
             <tr>
               <td> 1 </td>
